# rust_bootcamp_week1_1

./: Cargo.toml  test.http
fixtures/: blake3.txt  ed25519.pk  ed25519.sk
src/: lib.rs  main.rs  opts.rs  process-202404231704.rs
src/cli/: base64.rs  csv.rs  genpass.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs
